Fixed typo in entry 525, updated theme colors

--- a/writings/personal-essays/525-axioms.html
+++ b/writings/personal-essays/525-axioms.html
@@ -76,7 +76,7 @@
           <p>Still, there are many things that I haven't done. There are many things I still want to do. I have all of my projects 
             that I would like to work on. I have been thinking recently of the Universe, and how it must be that there is a purpose 
             to everything. I do not think that anything is random. The Universe has structure to it—it is obvious, and observable, 
-            and intuitive to any living thing. Many ideas of human construction can be traced back to a Universe. It is an 
+            and intuitive to any living thing. Many ideas of human construction can be traced back to a Universe. It is 
             intuitive, but many don't realise it.
           </p>
           <p>Does the Universe actively control us? I think not—rather, it has already written everything that will happen. It 
