Added musical glossary entry, cleaned up projects

--- a/musical-glossary/musical-glossary.html
+++ b/musical-glossary/musical-glossary.html
@@ -51,7 +51,7 @@
 
         <br>
 
-        <p style="margin: 0 10% 0 10%">Page created 2022/5/2, last updated 2022/8/29</p>
+        <p style="margin: 0 10% 0 10%">Page created 2022/5/2, last updated 2022/12/25</p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
@@ -69,6 +69,16 @@
             <h2 style="margin: 0"><a href="#doublecanon">Double Canon</a></h2>
             <p>two canons played at the same time that work with each other. A double two-part canon, for example, is two two-part canons, each with its own melodic line, played ontop of each other, making four-part counterpoint.
               See Igor Stravinsky's <a href="https://www.youtube.com/watch?v=kPS2LxqBOt4" id="external">double two-part canon</a>.
+            </p>
+          </div>
+
+          <!-- Intriguer -->
+          <div id="intriguer">
+            <h2 style="margin:0"><a href="#intriguer">Intriguer</a></h2>
+            <p>
+              a piece with a certain atmosphere (usually of playful mystery) and uniqueness, such that it intrigues the listener
+              to find other works by that composer. Usually intriguers tend to be the more famous of a composer's works; i.e. Franz Liszt's 
+              Hungarian Rhapsody N. 2 or La Campanella.
             </p>
           </div>
 
