--- a/writings/personal-essays/quotes/quotes.html
+++ b/writings/personal-essays/quotes/quotes.html
@@ -138,8 +138,10 @@
           <p id="p"><strong>“  </strong><em></em><strong> ”</strong></p>
           
           <br>
-          <h4 id="header"></h4>
-          <p id="p"><strong>“  </strong><em></em><strong> ”</strong></p>
+          <h4 id="header">(350) Put me out on the street, 2020/3/17</h4>
+          <p id="p"><strong>“  </strong><em>And a memory wanders by... and suddenly I remember that I wasted my entire life; and what did I 
+            do with any of it? It's all just memories and I haven't gotten anywhere for it.
+          </em><strong> ”</strong></p>
 
           <br>
           <h4 id="header">(106) Accumulation, 2019/11/7</h4>
