--- a/writings/personal-essays/559-been-19-for-a-while.html
+++ b/writings/personal-essays/559-been-19-for-a-while.html
@@ -53,11 +53,9 @@
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
           <a href="558-this-too-shall-pass.html" title="This Too Shall Pass">&larr; to previous entry</a>
-          <!--
           <span style="float: right">
-            <a href="552-i-wish-i-could-leave-society.html" title="I wish I could leave society">to next entry &rarr;</a>
+            <a href="562-the-philosophy-of-beautiful-minds.html" title="The Philosophy of Beautiful Minds">to next entry &rarr;</a>
           </span>
-        -->
         </p>
 
         <!-- Entry Title -->
