--- a/writings/personal-essays/personal-essays.html
+++ b/writings/personal-essays/personal-essays.html
@@ -83,6 +83,11 @@
               <th style="width: 10%">Entry#</th>
             </tr>
             <tr>
+              <td>2022/12/7</td>
+              <td><a href="562-the-philosophy-of-beautiful-minds.html">The Philosophy of Beautiful Minds</a></td>
+              <td>562</td>
+            </tr>
+            <tr>
               <td>2022/8/24</td>
               <td><a href="559-been-19-for-a-while.html">Been 19 for a while</a></td>
               <td>559</td>
