added 7 poems, 5 entries

--- a/writings/personal-essays/497-regrets-of-a-mundane-life.html
+++ b/writings/personal-essays/497-regrets-of-a-mundane-life.html
@@ -84,7 +84,7 @@
           </p>
           <p>It's the same way for my Dark Ages. I occasionally dipped very low... to the point of wanting to end my life at several moments. I think that time has gone now, too. I would certainly hope that it has, but it has made up a considerable portion of my short life so far, and because of that, it has affected me in ways that I am still living today, if only because I only came out of it a year ago. 
           </p>
-          <p>It is a coincidence that my best years were followed by my worst? Is it going to be a recurring pattern throughout my life that my highest highs are followed by my lowest lows? That a great period must be followed by a terrible one, as if by some kind of balance? Will I ever have years that I cannot classify as great or terrible, but simply as "mundane"—or is mundanity always assumed to be terrible?</p>
+          <p>Is it a coincidence that my best years were followed by my worst? Is it going to be a recurring pattern throughout my life that my highest highs are followed by my lowest lows? That a great period must be followed by a terrible one, as if by some kind of balance? Will I ever have years that I cannot classify as great or terrible, but simply as "mundane"—or is mundanity always assumed to be terrible?</p>
           
           <br><hr><br>
 
