--- a/writings/personal-essays/562-the-philosophy-of-beautiful-minds.html
+++ b/writings/personal-essays/562-the-philosophy-of-beautiful-minds.html
@@ -53,11 +53,9 @@
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
           <a href="559-been-19-for-a-while.html" title="Been 19 for a While">&larr; to previous entry</a>
-          <!--
           <span style="float: right">
-            <a href="552-i-wish-i-could-leave-society.html" title="I wish I could leave society">to next entry &rarr;</a>
+            <a href="563-drive-motivation.html" title="Drive, Motivation, and a Quality Life">to next entry &rarr;</a>
           </span>
-        -->
         </p>
 
         <!-- Entry Title -->
