--- a/writings/personal-essays/personal-essays.html
+++ b/writings/personal-essays/personal-essays.html
@@ -83,6 +83,31 @@
               <th style="width: 10%">Entry#</th>
             </tr>
             <tr>
+              <td>2023/2/26</td>
+              <td><a href="570-the-power-of-change.html">The Power of Change</a></td>
+              <td>570</td>
+            </tr>
+            <tr>
+              <td>2023/2/24</td>
+              <td><a href="569-fake-people.html">Fake People</a></td>
+              <td>569</td>
+            </tr>
+            <tr>
+              <td>2023/2/19</td>
+              <td><a href="568-beautiful-people.html">Beautiful People, and Soulmates</a></td>
+              <td>568</td>
+            </tr>
+            <tr>
+              <td>2023/2/7</td>
+              <td><a href="566-im-uncomfortable-with-myself.html">I'm Uncomfortable With Myself</a></td>
+              <td>566</td>
+            </tr>
+            <tr>
+              <td>2023/1/31</td>
+              <td><a href="563-drive-motivation.html">Drive, Motivation, and a Quality Life</a></td>
+              <td>563</td>
+            </tr>
+            <tr>
               <td>2022/12/7</td>
               <td><a href="562-the-philosophy-of-beautiful-minds.html">The Philosophy of Beautiful Minds</a></td>
               <td>562</td>
