--- a/writings/poems/004-four-couplets-one.html
+++ b/writings/poems/004-four-couplets-one.html
@@ -10,7 +10,7 @@
   <!--Webpage Title-->
   <head>
     <meta charset="utf-8">
-    <title>Summer Night | aidan's blog</title>
+    <title>Four Couplets I | aidan's blog</title>
     <link href="../../styles/style.css" rel="stylesheet">
   </head>
 
@@ -52,16 +52,16 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/poems/poems.html">&larr; back to poems</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="old-poems.html" title="Old Poems">&larr; to previous entry</a>
+          <a href="003-chicks.html" title="Chicks">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="002-clocks.html" title="Clocks">to next entry &rarr;</a>
+            <a href="005-four-couplets-two.html" title="Four Couplets II">to next entry &rarr;</a>
           </span>
         </p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
-          <h1 style="margin: 5% 0 0 0">Summer Night</h1>
-          <p style="margin: 0 0 30px 0">Poem 001, 2021/12/31</p>
+          <h1 style="margin: 5% 0 0 0">Four Couplets I</h1>
+          <p style="margin: 0 0 30px 0">Poem 004, 2023/1/18–22</p>
           
           <hr><br>
 
@@ -82,38 +82,36 @@
 
         <!-- Main Content -->
         <div style="margin: 0 10% 10px 10%">
-          <div class="row">
-            <div class="newcolumn left">
-              <p>The wind blows as I look through the window,<br>
-                over the hill and through the trees.<br>
-                The city glows in its soft light below,<br>
-                across the river separating us.
-                </p>
-              <p>I drift my eyes upwards towards the sky:<br>
-                dark grey clouds float there,<br>
-                floating in front of a black July.<br>
-                </p>
-              <p>I can tell that she is looking too,<br>
-                over the hill and through the trees.<br>
-                What does she think of the view,<br>
-                the night, and the summer breeze?  
-                </p>
-              <p>I tell her that it’s becoming late.<br>
-                Her response:<br>
-                don’t leave me. Stay here and wait.
-                </p>
-            </div>
+          <p><strong>I</strong> (2023/01/18)<br>
+            A bard plucks the lute, and birds chirp the sad melody.<br>
+            As he recites his poem: the birds all go mute, and listen to his elegy.
+            </p>
+          
+          <br>
 
-            <div class="newcolumn right">
-              <br>
+          <p><strong>III</strong> (2023/01/20)<br>
+            Every <em>person</em> is a <em>friend</em> if you’re <em>kind</em> enough;<br>
+            but take care to never <em>offend</em> in <em>blind</em> rebuff.
+            </p>
 
-              <img src="001-unedited.jpg" alt="Monterey Moonlight by Granville Redmond" title="Monterey Moonlight by Granville Redmond" width="100%">
-            </div>
-          </div>
+          <br>
+
+          <p><strong>IV</strong> (2023/01/22)<br>
+            A driven car obeys the driver’s command;<br>
+            but a horse being ridden will do anything to be unmanned.
+            </p>
+
+          <br>
+
+          <p><strong>V</strong> (2023/01/22)<br>
+            The train cuts through the forest, whistle blowing,<br>
+            while the animals stare bewildered from their home in Wyoming
+            </p>
 
           <br><hr><br>
 
         </div>
+
       </article> 
     </div>
   </body>
