--- a/writings/poems/005-four-couplets-two.html
+++ b/writings/poems/005-four-couplets-two.html
@@ -10,7 +10,7 @@
   <!--Webpage Title-->
   <head>
     <meta charset="utf-8">
-    <title>Clocks | aidan's blog</title>
+    <title>Four Couplets II | aidan's blog</title>
     <link href="../../styles/style.css" rel="stylesheet">
   </head>
 
@@ -52,18 +52,16 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/poems/poems.html">&larr; back to poems</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="002-old-lodge.html" title="A Stay in the Old Lodge">&larr; to previous entry</a>
-          <!--
+          <a href="004-four-couplets-one.html" title="Four Couplets I">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="004-time.html" title="Time">to next entry &rarr;</a>
-            -->
+            <a href="006-four-quatrains-one.html" title="Four Quatrains I">to next entry &rarr;</a>
           </span>
         </p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
-          <h1 style="margin: 5% 0 0 0">Clocks</h1>
-          <p style="margin: 0 0 30px 0">Poem 003, 2022/7/21</p>
+          <h1 style="margin: 5% 0 0 0">Four Couplets II</h1>
+          <p style="margin: 0 0 30px 0">Poem 005, 2023/1/23–2/3</p>
           
           <hr><br>
 
@@ -84,32 +82,36 @@
 
         <!-- Main Content -->
         <div style="margin: 0 10% 10px 10%">
-          <div class="row">
-            <div class="newcolumn left">
-              <p>Ticking, tocking,<br>
-                non-stop rocking,<br>
-                incessant mocking,<br>
-                </p>
-              <p>never failing,<br>
-                never once trailing<br>
-                behind, my wailing,<br>
-                </p>
-              <p>only used a tool,<br>
-                counted a fool,<br>
-                ran under, worn jewel.<br>
-                </p>
-            </div>
+          <p><strong>VI</strong> (2023/01/23)<br>
+            Never before has a poem ever been written<br>
+            which describes the human soul with which we are so smitten.
+            </p>
+          
+          <br>
 
-            <div class="newcolumn right">
-              <br>
+          <p><strong>IX</strong> (2023/01/26)<br>
+            Well if the first of man to love was He,<br>
+            Then what was love as knew by chimp and ‘key?
+            </p>
 
-              <img src="003-big-ben.jpg" alt="Big Ben" title="Big Ben" width="100%">
-            </div>
-          </div>
+          <br>
+
+          <p><strong>X</strong> (2023/01/27)<br>
+            Slugs wore armor once upon a time<br>
+            when they were snails with shells of swirly spine
+            </p>
+
+          <br>
+
+          <p><strong>XI</strong> (2023/02/03)<br>
+            They say that love is like a gravity:<br>
+            it attracts, and bends, and distorts reality.
+            </p>
 
           <br><hr><br>
 
         </div>
+
       </article> 
     </div>
   </body>
