--- a/writings/poems/006-four-quatrains-one.html
+++ b/writings/poems/006-four-quatrains-one.html
@@ -10,7 +10,7 @@
   <!--Webpage Title-->
   <head>
     <meta charset="utf-8">
-    <title>Summer Night | aidan's blog</title>
+    <title>Four Quatrains I | aidan's blog</title>
     <link href="../../styles/style.css" rel="stylesheet">
   </head>
 
@@ -52,16 +52,16 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/poems/poems.html">&larr; back to poems</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="old-poems.html" title="Old Poems">&larr; to previous entry</a>
+          <a href="005-four-couplets-two.html" title="Four Couplets II">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="002-clocks.html" title="Clocks">to next entry &rarr;</a>
+            <a href="007-that-tree-that-you-love.html" title="That Tree That You Love">to next entry &rarr;</a>
           </span>
         </p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
-          <h1 style="margin: 5% 0 0 0">Summer Night</h1>
-          <p style="margin: 0 0 30px 0">Poem 001, 2021/12/31</p>
+          <h1 style="margin: 5% 0 0 0">Four Quatrains I</h1>
+          <p style="margin: 0 0 30px 0">Poem 006, 2023/1/28–2/15</p>
           
           <hr><br>
 
@@ -82,38 +82,44 @@
 
         <!-- Main Content -->
         <div style="margin: 0 10% 10px 10%">
-          <div class="row">
-            <div class="newcolumn left">
-              <p>The wind blows as I look through the window,<br>
-                over the hill and through the trees.<br>
-                The city glows in its soft light below,<br>
-                across the river separating us.
-                </p>
-              <p>I drift my eyes upwards towards the sky:<br>
-                dark grey clouds float there,<br>
-                floating in front of a black July.<br>
-                </p>
-              <p>I can tell that she is looking too,<br>
-                over the hill and through the trees.<br>
-                What does she think of the view,<br>
-                the night, and the summer breeze?  
-                </p>
-              <p>I tell her that it’s becoming late.<br>
-                Her response:<br>
-                don’t leave me. Stay here and wait.
-                </p>
-            </div>
+          <p><strong>I</strong> (2023/01/28)<br>
+            If thee aren’t the fairest of all on Earth,<br>
+            then I shall ask if God walks among men;<br>
+            For surely men that stand with the most in worth,<br>
+            deserve instead of fortune, wealth in zen, then.
+            </p>
 
-            <div class="newcolumn right">
-              <br>
+          <br>
 
-              <img src="001-unedited.jpg" alt="Monterey Moonlight by Granville Redmond" title="Monterey Moonlight by Granville Redmond" width="100%">
-            </div>
-          </div>
+          <p><strong>II</strong> (2023/01/30)<br>
+            The tranquil of minds which are shroud in love<br>
+            are always better measured against hate;<br>
+            The former moves the heavenly stars above,<br>
+            the latter nothing, ‘cept to divide and tempt fate.
+            </p>
+
+          <br>
+
+          <p><strong>III</strong> (2023/02/07)<br>
+            All things have their end and are born again,<br>
+            so wishing you were young is an undoing.<br>
+            To waste all your life is the sin of man,<br>
+            so love your Self in happiness pursuing.
+            </p>
+
+          <br>
+
+          <p><strong>IV</strong> (2023/02/15)<br>
+            If peace is what you’re after,<br>
+            then give no mind to things without control;<br>
+            Instead they’re met with laughter,<br>
+            the only way to meet your nature’s goal.
+            </p>
 
           <br><hr><br>
 
         </div>
+
       </article> 
     </div>
   </body>
