--- a/writings/poems/poems.html
+++ b/writings/poems/poems.html
@@ -83,13 +83,43 @@
               <th style="width: 10%">Poem#</th>
             </tr>
             <tr>
-              <td>2022/7/21</td>
-              <td><a href="003-clocks.html">Clocks</a></td>
+              <td>2023/2/6–17</td>
+              <td><a href="009-four-couplets-three.html">Four Couplets III</a></td>
+              <td>009</td>
+            </tr>
+            <tr>
+              <td>2023/1/26–2/25</td>
+              <td><a href="008-four-haikus-one.html">Four Haikus I</a></td>
+              <td>008</td>
+            </tr>
+            <tr>
+              <td>2023/2/10</td>
+              <td><a href="007-that-tree-that-you-love.html">That Tree That You Love</a></td>
+              <td>007</td>
+            </tr>
+            <tr>
+              <td>2023/1/28–2/15</td>
+              <td><a href="006-four-quatrains-one.html">Four Quatrains I</a></td>
+              <td>006</td>
+            </tr>
+            <tr>
+              <td>2023/1/23–2/3</td>
+              <td><a href="005-four-couplets-two.html">Four Couplets II</a></td>
+              <td>005</td>
+            </tr>
+            <tr>
+              <td>2023/1/18–22</td>
+              <td><a href="004-four-couplets-one.html">Four Couplets I</a></td>
+              <td>004</td>
+            </tr>
+            <tr>
+              <td>2023/1/17</td>
+              <td><a href="003-chicks.html">Chicks</a></td>
               <td>003</td>
             </tr>
             <tr>
-              <td>2022/5/22–24</td>
-              <td><a href="002-old-lodge.html">A Stay in the Old Lodge</a></td>
+              <td>2022/7/21</td>
+              <td><a href="002-clocks.html">Clocks</a></td>
               <td>002</td>
             </tr>
             <tr>
