--- a/writings/poems/002-clocks.html
+++ b/writings/poems/002-clocks.html
@@ -10,7 +10,7 @@
   <!--Webpage Title-->
   <head>
     <meta charset="utf-8">
-    <title>Summer Night | aidan's blog</title>
+    <title>Clocks | aidan's blog</title>
     <link href="../../styles/style.css" rel="stylesheet">
   </head>
 
@@ -52,16 +52,16 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/poems/poems.html">&larr; back to poems</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="old-poems.html" title="Old Poems">&larr; to previous entry</a>
+          <a href="001-summer-night.html" title="Summer Night">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="002-clocks.html" title="Clocks">to next entry &rarr;</a>
+            <a href="003-chicks.html" title="Chicks">to next entry &rarr;</a>
           </span>
         </p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
-          <h1 style="margin: 5% 0 0 0">Summer Night</h1>
-          <p style="margin: 0 0 30px 0">Poem 001, 2021/12/31</p>
+          <h1 style="margin: 5% 0 0 0">Clocks</h1>
+          <p style="margin: 0 0 30px 0">Poem 002, 2022/7/21</p>
           
           <hr><br>
 
@@ -84,30 +84,24 @@
         <div style="margin: 0 10% 10px 10%">
           <div class="row">
             <div class="newcolumn left">
-              <p>The wind blows as I look through the window,<br>
-                over the hill and through the trees.<br>
-                The city glows in its soft light below,<br>
-                across the river separating us.
+              <p>Ticking, tocking,<br>
+                non-stop rocking,<br>
+                incessant mocking,<br>
                 </p>
-              <p>I drift my eyes upwards towards the sky:<br>
-                dark grey clouds float there,<br>
-                floating in front of a black July.<br>
+              <p>never failing,<br>
+                never once trailing<br>
+                behind, my wailing,<br>
                 </p>
-              <p>I can tell that she is looking too,<br>
-                over the hill and through the trees.<br>
-                What does she think of the view,<br>
-                the night, and the summer breeze?  
-                </p>
-              <p>I tell her that it’s becoming late.<br>
-                Her response:<br>
-                don’t leave me. Stay here and wait.
+              <p>only used a tool,<br>
+                counted a fool,<br>
+                ran under, worn jewel.<br>
                 </p>
             </div>
 
             <div class="newcolumn right">
               <br>
 
-              <img src="001-unedited.jpg" alt="Monterey Moonlight by Granville Redmond" title="Monterey Moonlight by Granville Redmond" width="100%">
+              <img src="002-big-ben.jpg" alt="Big Ben" title="Big Ben" width="100%">
             </div>
           </div>
 
