changed home page

--- a/index.html
+++ b/index.html
@@ -70,20 +70,21 @@
             long on them, and I write them primarily for my own sake. My <em>Articles</em> are written over a longer period, perhaps
             a week or two; include links to research that back up my claims; and are written for a larger audience as a 
             persuasive or informative piece.</p>
-          <p>Note that any artwork used on the website which is not in the "Gallery" section on the left navigation bar
-            is <em>not</em> my own artwork (unless stated that it is mine), and typically will fall under the public domain.</p>
+          <p>Note that any artwork used within the "Writings" section on the left navigation bar
+            is <em>not</em> my own artwork (unless stated that it is mine), and typically will fall under the public domain. This includes
+            paintings and drawings within the Poems, and occasional images within the Personal Essays, and possibly
+            other things. Everything other than the artworks is my own original work.</p>
 
           <hr>
 
           <h3><span style="font-weight:normal;">Featured Personal Essay:</span>
-            <a href="writings/personal-essays/558-this-too-shall-pass.html">"This Too Shall Pass"</a>
+            <a href="writings/personal-essays/568-beautiful-people.html">"Beautiful People, and Soulmates"</a>
             <span style="font-size:16px;font-weight:normal;">
-            (2022/8/23)</span></h3>
+            (2023/2/19)</span></h3>
 
           <p style="margin: 0 5% 0 5%">
             <em>
-              Nothing is permanent. Everything must eventually be reduced to memories, relegated to the past. The good things come 
-              and go, and so do the bad things, and everything else too. [...]
+              Internal beauty—the only kind that matters. What makes you think you're special when you smile? [...]
             </em>
           </p>
 
@@ -100,7 +101,14 @@
             </em>
           </p>
 
-          
+          <hr>
+
+          <p><strong>An important note:</strong> if you experience white flashes when clicking through pages, click "Change Theme" in the 
+          navbar on the left. You could also change your browser settings to dark mode, and have it override system colors. This will 
+          make the white flashes black instead and will render the dark mode of this site more enjoyable; however, doing this will break 
+          other websites that don't have their text and background colors properly set up, which happens to be quite a lot of websites 
+          from what I've found.</p>
+
           <br><hr><br>
 
         </div>
