fixed typo on wandering morality

--- a/writings/personal-essays/443-wandering-morality.html
+++ b/writings/personal-essays/443-wandering-morality.html
@@ -106,7 +106,7 @@
 
           <h3>Within us all is a lot of love</h3>
           <p>I think people do bad things because they are ignorant and don't understand their actions. Stalin once said that one 
-            death is a tradegy, but a million is a statistic. It is so applicable to people's feelings towards animals as well: 
+            death is a tragedy, but a million is a statistic. It is so applicable to people's feelings towards animals as well: 
             the death of their pet is tragic, but killing billions of land animals and <em>trillions</em> of fish per year is just a statistic. 
             They don't care as long as they don't have an emotional attachment to the animal. So many of people's "logical" 
             arguments against veganism sound absolutely terrible if applied to other things. They can all be dismantled within 
