fixed typo in 570

--- a/writings/personal-essays/570-the-power-of-change.html
+++ b/writings/personal-essays/570-the-power-of-change.html
@@ -103,7 +103,7 @@
           </p>
           <p>A lot of people might think, that they are capable of changing other people. It's not possible—for someone to change, they 
             need to want to change themself. You can't force someone to change. Maybe you can eventually convince them, but what good 
-            does it do you? You're wasting your time advising someone else when you could be advising yourself, and you're wasiting time on an 
+            does it do you? You're wasting your time advising someone else when you could be advising yourself, and you're wasting time on an 
             idiot who will most likely never truly change themself. Just leave them be. Let them waste their own lives—stumbling through events, 
             chasing short-term pleasures, yet never considering the bigger picture of their circumstances. 
           </p>
