added poem 10, and added images to previous poems

--- a/writings/poems/003-chicks.html
+++ b/writings/poems/003-chicks.html
@@ -82,8 +82,8 @@
 
         <!-- Main Content -->
         <div style="margin: 0 10% 10px 10%">
-          <div class="row">
-            <div class="newcolumn left">
+          <div>
+            <div>
               <p>In the night’s pitch dark—<br>
                 tree branches cracking,<br>
                 and leaves thrashing, in the wind.
@@ -93,12 +93,13 @@
                 born in the world, to their nest pinned.
                 </p>
             </div>
-
+            <!--
             <div class="newcolumn right">
               <br>
 
               <img src="002-big-ben.jpg" alt="Big Ben" title="Big Ben" width="100%">
             </div>
+          -->
           </div>
 
           <br><hr><br>
