--- a/writings/poems/008-four-haikus-one.html
+++ b/writings/poems/008-four-haikus-one.html
@@ -119,7 +119,11 @@
             <div class="newcolumn right">
               <br>
 
-              <img src="007-fallen-tree.jpg" alt="Fallen Tree by Alexandre Calame" title="Fallen Tree by Alexandre Calame" width="100%">
+              <img src="008-moonlit_landscape_with_bridge.jpg" alt="Moonlit Landscape with Bridge by Aert van der Neer" title="Moonlit Landscape with Bridge by Aert van der Neer" width="100%">
+
+              <br>
+
+              <img src="008-blade-of-grass-water-droplet.jpg" alt="Blade of Grass with Water Droplet" title="Blade of Grass with Water Droplet" width="100%">
             </div>
           </div>
 
