--- a/writings/poems/poems.html
+++ b/writings/poems/poems.html
@@ -83,6 +83,16 @@
               <th style="width: 10%">Poem#</th>
             </tr>
             <tr>
+              <td>2023/3/7</td>
+              <td><a href="012-sonnet-one.html">Sonnet I</a></td>
+              <td>012</td>
+            </tr>
+            <tr>
+              <td>2023/2/19–3/3</td>
+              <td><a href="011-four-couplets-four.html">Four Couplets IV</a></td>
+              <td>011</td>
+            </tr>
+            <tr>
               <td>2023/2/28</td>
               <td><a href="010-the-old-mans-house.html">The Old Man's House</a></td>
               <td>010</td>
