added a "latest publications" part to home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <br>
 
-        <p style="margin: 0 10% 0 10%">Page created 2022/4/25, last updated 2023/2/27</p>
+        <p style="margin: 0 10% 0 10%">Page created 2022/4/25, last updated 2023/3/7</p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
@@ -63,19 +63,6 @@
 
         <!-- Main Content -->
         <div align="justify" style="margin: 0 10% 10px 10%">
-          <p>
-            Welcome to my website. I mainly post personal writings and projects.
-          </p>
-          <p>My <em>Personal Essays</em> are excerpts from my personal journal. They are not polished writings; I don't spend
-            long on them, and I write them primarily for my own sake. My <em>Articles</em> are written over a longer period, perhaps
-            a week or two; include links to research that back up my claims; and are written for a larger audience as a 
-            persuasive or informative piece.</p>
-          <p>Note that any artwork used within the "Writings" section on the left navigation bar
-            is <em>not</em> my own artwork (unless stated that it is mine), and typically will fall under the public domain. This includes
-            paintings and drawings within the Poems, and occasional images within the Personal Essays, and possibly
-            other things. Everything other than the artworks is my own original work.</p>
-
-          <hr>
 
           <h3><span style="font-weight:normal;">Featured Personal Essay:</span>
             <a href="writings/personal-essays/568-beautiful-people.html">"Beautiful People, and Soulmates"</a>
@@ -100,6 +87,46 @@
               played simultaneously. [...]
             </em>
           </p>
+
+          <hr>
+
+          <h3><span style="font-weight:normal;">Latest publications:</span></h3>
+            <div style="margin: 0 5% 0 5%">
+              <h4>
+                <span style="font-weight:normal">Poem 12:</span>
+                <a href="writings/poems/012-sonnet-one.html">"Sonnet I"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/3/7)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Poem 11:</span>
+                <a href="writings/poems/011-four-couplets-four.html">"Four Couplets IV"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/2/19–3/3)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 570:</span>
+                <a href="writings/personal-essays/570-the-power-of-change.html">"The Power of Change"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/2/26)</span>
+              </h4>
+            </div>
+          
+          <hr>
+
+          <p>
+            Welcome to my website. I mainly post personal writings and projects.
+          </p>
+          <p>My <em>Personal Essays</em> are excerpts from my personal journal. They are not polished writings; I don't spend
+            long on them, and I write them primarily for my own sake. My <em>Articles</em> are written over a longer period, perhaps
+            a week or two; include links to research that back up my claims; and are written for a larger audience as a 
+            persuasive or informative piece.</p>
+          <p>Note that any artwork used within the "Writings" section on the left navigation bar
+            is <em>not</em> my own artwork (unless stated that it is mine), and typically will fall under the public domain. This includes
+            paintings and drawings within the Poems, and occasional images within the Personal Essays, and possibly
+            other things. Everything other than the artworks is my own original work.</p>
 
           <hr>
 
